fix:soldout alignment & padding of headline

--- a/assets/global.css
+++ b/assets/global.css
@@ -9,13 +9,20 @@
     padding: 0;
 }
 
+
 /* section */
 .section-blends {
     background-image: url('scroll-product-section-gradient-bg.png') !important;
     background-size: cover !important;
     background-position: center !important;
     background-repeat: no-repeat !important;
-    padding: 80px 0px;
+    padding: 32px 0px;
+}
+
+@media screen and (min-width: 700px) {
+    .section-blends {
+        padding: 80px 0;
+    }
 }
 
 .goshop {
@@ -185,7 +192,7 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 36px;
-    letter-spacing: -3px;
+    letter-spacing: -2px;
 }
 
 .section-header .prose p {
